# Icare

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  docker-compose.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  MODULES.md  SECURITY.md  USER_GUIDE.md
src/core/: Cargo.toml  README.md
src/core/aegis/: mod.rs
src/core/crypto/: quantum_vault.rs  sphincs.rs
src/core/dashboard/: mod.rs
src/core/neural_net/: anomaly_detection.rs  feature_extraction.rs  inference.rs  mod.rs  model_training.rs  transformer.rs
src/core/neurofirewall/: mod.rs
src/core/src/: aegis.rs  crypto.rs  dashboard.rs  main.rs  neural_net.rs  neurofirewall.rs  warpshield.rs
src/core/src/dashboard/: mod.rs
src/core/warpshield/: mod.rs
src/ui/: App.tsx  Dockerfile  index.tsx  nginx.conf  package.json  theme.tsx  tsconfig.json
src/ui/components/dashboard/: PerformanceWidget.tsx  RecentEventsWidget.tsx  SecurityScoreWidget.tsx  SystemStatusWidget.tsx  ThreatMapWidget.tsx  ThreatSummaryWidget.tsx
src/ui/pages/: Analytics.tsx  Dashboard.tsx  ThreatMap.tsx
src/ui/public/: index.html  manifest.json
src/ui/src/: App.tsx  index.tsx  theme.tsx
src/ui/src/store/: index.ts
src/ui/store/: index.ts
src/ui/store/slices/: alertSlice.ts  analyticsSlice.ts  authSlice.ts  dashboardSlice.ts  settingsSlice.ts  threatSlice.ts
tests/integration/: mod.rs
tests/performance/: mod.rs
tests/resistance/: mod.rs
